# weederbot

./: .gitignore  README.md  forward80.sh
husky_ws/src/husky_control/: CMakeLists.txt  package.xml
husky_ws/src/husky_control/config/: husky_control.yml
husky_ws/src/husky_control/launch/: husky_control.launch
husky_ws/src/husky_custom_description/urdf/: custom_description.urdf.xacro
husky_ws/src/husky_custom_gazebo/urdf/: custom_description.gazebo.xacro
husky_ws/src/husky_custom_navigation/: CMakeLists.txt  package.xml
husky_ws/src/husky_custom_navigation/config/: costmap_common.yaml  costmap_global_pointcloud.yaml  costmap_local.yaml  planner.yaml
husky_ws/src/husky_custom_navigation/launch/: move_base.launch  move_base_orig.launch
husky_ws/src/husky_drive_grid/: CMakeLists.txt  package.xml
husky_ws/src/husky_drive_grid/src/: husky_drive_grid.py  husky_drive_grid_mod.py
husky_ws/src/husky_marker_tracking/: CMakeLists.txt  package.xml
husky_ws/src/husky_marker_tracking/config/: axis_calibration.txt  axis_calibration.yaml
husky_ws/src/husky_marker_tracking/include/: aruco_detector.h
husky_ws/src/husky_marker_tracking/src/: aruco_detector.cpp  husky_marker_tracking.cpp
husky_ws/src/husky_pointcloud_laserscan/: CMakeLists.txt  package.xml
husky_ws/src/husky_pointcloud_laserscan/launch/: convert.launch
husky_ws/src/ptz_control/: CMakeLists.txt  package.xml
husky_ws/src/ptz_control/src/: joystic.py
husky_ws/src/target_tracking/: CMakeLists.txt  package.xml
husky_ws/src/target_tracking/src/: main.cpp
husky_ws/src/viso2_ros/launch/: husky_viso2.launch
husky_ws/src/weedwacker_control/: CMakeLists.txt  package.xml
husky_ws/src/weedwacker_control/launch/: weedwacker_control.launch
ww/: microchipUSB.dcm  microchipUSB.lib  weedwacker-cache.lib  weedwacker.bak  weedwacker.pro  weedwacker.sch
(+1 files in other folders)
